# cuda-benchmark

./: .clang-format  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
CudaUtils/: CudaFun.cu  CudaFun.cuh  CudaUtils.cu  CudaUtils.cuh  DeviceFunctions.cuh  Kernels.cuh
Main/: main.cpp
